# distributed_storage_system

./: .clang-format  .gitignore  CMakeLists.txt  README.md  block.hpp  block_cache.hpp  config.hpp  config.py  constant.py  disk.hpp  fs.py  fs_block.hpp  fs_server.cpp  fs_server.py  gen_proto.sh  interface_type.py  raid_controller.hpp  raid_file_system.hpp  raid_node_server.cpp  raid_server.py  requirements.txt  type.hpp
conf/: raid_fs.yaml
fuzz_test/: CMakeLists.txt  helper.hpp  open_fuzzing.cpp  read_fuzzing.cpp  remove_fuzzing.cpp  write_fuzzing.cpp
proto/: errno.proto  error.proto  fs.proto  raid.proto
src/: block.hpp  block_cache.hpp  config.hpp  disk.hpp  fs_block.hpp  fs_server.cpp  galois_field.hpp  raid_controller.hpp  raid_file_system.hpp  raid_node_server.cpp
test/: CMakeLists.txt  file_system_test.cpp  galois_field_test.cpp  test_raid.py
